--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/Sao_Paulo
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Pedro Leone                          # the main title
 
 tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
@@ -30,23 +30,23 @@ description: >-                        # used by seo meta and the atom feed
 url: ''
 
 github:
-  username: github_username             # change to your github username
+  username: pedroleone
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: pedrolleone
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com             # change to your email address
+  name: Pedro Leone
+  email: contato@pedrole.one
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/pedrolleone
+    - https://github.com/pedroleone
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/pedrollgoncalves/
 
 google_site_verification:               # fill in to your verification string
 
