--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ timezone: America/Sao_Paulo
 
 title: Pedro Leone                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Desenvolvedor Ruby on Rails   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Blog pessoal de Pedro Leone, desenvolvedor Ruby on Rails
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
@@ -81,7 +81,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/profile-pic.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
